Correct h1 spacing issue

--- a/components/Header/header.less
+++ b/components/Header/header.less
@@ -25,7 +25,7 @@
     font-size: 6.45rem;
     font-weight: bold;
     line-height: 1.19;
-    margin: 0 8% 4.9%;
+    margin: 0 8% 5%;
     position: absolute;
     bottom: 0;
     z-index: 4;
@@ -35,7 +35,7 @@
     }
 
     @media @mobile {
-      margin: 35% 5% 0;
+      margin: 35% 5% 6%;
     }
   }
 }
