--- a/css/index.css
+++ b/css/index.css
@@ -360,7 +360,7 @@ a:hover {
   font-size: 6.45rem;
   font-weight: bold;
   line-height: 1.19;
-  margin: 0 8% 4.9%;
+  margin: 0 8% 5%;
   position: absolute;
   bottom: 0;
   z-index: 4;
@@ -372,7 +372,7 @@ a:hover {
 }
 @media (max-width: 500px) {
   .header .title {
-    margin: 35% 5% 0;
+    margin: 35% 5% 6%;
   }
 }
 footer {
@@ -934,6 +934,11 @@ footer .copyright {
 .services__introduction {
   margin: 50px 8% 0;
   line-height: 1.6;
+}
+@media (max-width: 500px) {
+  .services__introduction {
+    margin: 50px 5% 0;
+  }
 }
 .header .title {
   bottom: 0;
