--- a/less/services.less
+++ b/less/services.less
@@ -7,4 +7,8 @@
 .services__introduction {
   margin: 50px 8% 0;
   line-height: 1.6;
+
+  @media @mobile {
+    margin: 50px 5% 0;
+  }
 }
